--- a/api/.env
+++ b/api/.env
@@ -3,7 +3,7 @@ TOKENLIFE=2m
 REFRESH_TOKEN_LIFE=7d
 HOSTEL_LAT=10.694544739128162
 HOSTEL_LNG=78.97900160177903
-EMAIL_ID=benmega500@gmail.com
-PASS_KEY=xsozotdvwyrqpgiu
+EMAIL_ID=chozhaboyshostel@gmail.com
+PASS_KEY=izeabxqfrvoneobq
 
 
