--- a/api/.env
+++ b/api/.env
@@ -4,6 +4,7 @@ REFRESH_TOKEN_LIFE=7d
 HOSTEL_LAT=10.694544739128162
 HOSTEL_LNG=78.97900160177903
 EMAIL_ID=chozhaboyshostel@gmail.com
-PASS_KEY=izeabxqfrvoneobq
+PASS_KEY=ohohllsyzbrgscwi
+RADIUS=5000
 
 
